--- a/www/app/shared/item/bottom-sheet.html
+++ b/www/app/shared/item/bottom-sheet.html
@@ -7,7 +7,7 @@
                 Send to Vault
             </md-button>
         </md-item>
-        <md-item ng-repeat="char in ::chars track by ::char.characterBase.characterId" ng-if="::(item.charId != char.characterBase.characterId)">
+        <md-item ng-repeat="char in ::chars track by ::char.characterBase.characterId" ng-if="::(item.charId != char.characterBase.characterId || !item.isEquipped)">
             <md-button md-no-ink ng-click="equipItem(item, char.characterBase.characterId)">
                 <md-icon md-font-icon="ion-tshirt"></md-icon>
                 Equip
