--- a/www/app/shared/item/bottom-sheet.html
+++ b/www/app/shared/item/bottom-sheet.html
@@ -1,4 +1,4 @@
-<md-bottom-sheet id="item-sheet">
+<md-bottom-sheet id="item-sheet" class="animate">
     <h3>{{::item.itemName}}</h3>
     <h4>
         <img ng-if="::item.charId" style="height: 26px; width: 26px; vertical-align: middle;" ng-src="http://www.bungie.net{{::getCharacterEmblem(item.charId)}}" />
